# terser-tokens

./: .gitignore  Cargo.toml  file.mjs  shell.nix
src/: bin.rs  lib.rs  swc_parse.rs  swc_stringify.rs
src/analyze/: can_be_reordered.rs  construct_call_graph.rs  count_variable_uses.rs  count_variable_writes.rs  find_multiple_writes.rs  function_usage_count.rs  may_have_side_effects.rs  mod.rs
src/ast/: ast.rs  mod.rs
src/basic_blocks/: basic_block.rs  basic_block_group.rs  basic_block_instruction.rs  basic_block_module.rs  convert.rs  data_structures.rs  dominator_tree.rs  fmt_debug.rs  instruction.rs  iteration.rs  mod.rs  normalize.rs  normalize_module.rs  phi_nodes.rs  structured_flow.rs  structured_function.rs  structured_module.rs  testutils.rs  to_ast.rs
src/basic_blocks/convert/: mod.rs  (+1 more)
src/block_ops/: mod.rs  normalize.rs  normalize_module.rs  phi_nodes.rs  to_structured_flow.rs
src/compress/: compress.rs  evaluate.rs  mod.rs  remove_dead_code.rs
src/data_structures/: cow_map.rs  mod.rs
src/from_ast/: convert.rs  convert_block.rs  convert_class.rs  convert_context.rs  convert_context_names.rs  convert_function.rs  convert_lhs.rs  convert_module.rs  convert_pattern.rs  find_nonlocals.rs  function_like.rs  mod.rs
src/functional_tests/: calls.rs  classes.rs  closures.rs  conditions.rs  functions.rs  globals.rs  incr_decr.rs  loops.rs  mod.rs  objects.rs  ops.rs  real_world.rs  scopes.rs  switch.rs  template_strings.rs  tool.rs
src/interpret/: arguments.rs  call_graph.rs  interpret.rs  interpret_block_group.rs  interpret_completion.rs  interpret_ctx.rs  interpret_math_ops.rs  interpret_module.rs  js_args.rs  js_completion.rs  js_type.rs  mod.rs
src/parser/: expression.rs  mod.rs  primary_expression.rs
src/scope/: mod.rs  scope.rs  scope_tree.rs
src/ssa/: convert.rs  dominator_tree.rs  mod.rs  ssa_ast.rs  ssa_fn.rs  testutils.rs  to_ast.rs
src/testutils/: mod.rs  parse_instruction.rs  parse_instructions.rs  parse_structured_flow.rs  testutils.rs
src/to_ast/: ast_builders.rs  base54.rs  class_to_ast.rs  dominator_tree_for_translation.rs  function_to_ast.rs  inlined_variables.rs  lhs_to_ast.rs  mod.rs  patterns_to_ast.rs  precedence.rs  remove_phi.rs  statements_forced_to_expr_ast.rs  structured_flow.rs  to_ast.rs  to_ast_context.rs  to_structured_flow.rs
src/tokenizer/: arrow.rs  comments.rs  escapes.rs  misc.rs  mod.rs  next_token.rs  number.rs  private.rs  punc_operators.rs  template_string.rs  tests.rs  tokenizer.rs  tokens.rs
(+10 files in other folders)
