[package]
name = "terser-tokens"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.84"
nom = "7.1.3"
num-bigint = "0.4"
unicode-ident = "1.0.6"
lalrpop-util = "0.19.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

swc_core = {version = "0.69", features = ["ecma_parser"] }
swc_ecma_codegen = "0.135.7"
swc_ecma_parser = "0.130.6"
swc_common = "0.29.37"


[dev-dependencies]
insta = "1.9.0"

[build-dependencies]
lalrpop = { version = "0.19.1", default-features = false }