[package]
name = "terser-tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "terser-tokens"
path = "src/bin.rs"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.84"
nom = "7.1.3"
num-bigint = "0.4"
unicode-ident = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
lazy_static = "1.4.0"
fix_fn = "1.0.2"
domtree = "0.2.0"
deep-bind = "0.1.0"
map-macro = "0.2.6"
hamt = "0.2.0"
v8 = "0.75.0"
ordered-float = "3.9.1"

swc_core = {version = "0.78.3", features = ["ecma_parser", "ecma_ast"] }
swc_ecma_codegen = "0.141.2"
swc_ecma_parser = "0.136.0"
swc_ecma_ast = "0.106.0"
swc_common = "0.31.12"
ryu-js = "1.0.0"


[dev-dependencies]
insta = "1.9.0"
